# VocaApp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  voca.db  voca.db-journal
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature.md  question.md
.github/workflows/: check-lint.yml
src/: db.py  etl.py  main.py  quiz.py
tests/: __init__.py  test_sample.py
